ocp-resources/llamacpp.yaml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: llamacpp
      app.kubernetes.io/component: llamacpp
      app.kubernetes.io/instance: llamacpp
    name: llamacpp
  spec:
    lookupPolicy:
      local: false
    tags:
    - annotations:
        openshift.io/imported-from: quay.io/noeloc/llamacpp
      from:
        kind: DockerImage
        name: quay.io/noeloc/llamacpp
      generation: null
      importPolicy: {}
      name: latest
      referencePolicy:
        type: ""
  status:
    dockerImageRepository: ""
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"llamacpp:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"llamacpp\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: llamacpp
      app.kubernetes.io/component: llamacpp
      app.kubernetes.io/instance: llamacpp
    name: llamacpp
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: llamacpp
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: llamacpp
      spec:
        containers:
        - env:
          - name: CONTEXTSIZE
            value: "512"
          - name: EMBEDDINGS
          - name: MODELLOCATION
            value: /tmp/models
          - name: MODELNAME
            value: test
          image: quay.io/noeloc/llamacpp
          name: llamacpp
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          volumeMounts:
          - mountPath: /tmp/models
            name: data
        volumes:
        - name: data
          persistentVolumeClaim:
            claimName: model-store
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: llamacpp
      app.kubernetes.io/component: llamacpp
      app.kubernetes.io/instance: llamacpp
    name: llamacpp
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deployment: llamacpp
  status:
    loadBalancer: {}
kind: List
metadata: {}
